# cpp-playground

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  setup_project.sh
app/: CMakeLists.txt  main.cpp
app/src/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/: CMakeLists.txt  test_header.hpp
lib/src/: CMakeLists.txt  test_source.cpp
lib/test/: CMakeLists.txt
lib/test/src/: CMakeLists.txt  main.cpp  test_file.cpp
